<resources>
    <string name="app_name">Project Entur Public Transport App</string>
    <string name="cardText1">Waiting for text1...</string>
    <string name="cardText2">Waiting for text2...</string>
    <string name="cardText3">Waiting for text3...</string>
    <string name="tripEditTextFromHint">from</string>
    <string name="tripEditTextToHint">to</string>
    <string name="tripButtonStartQuery">Find</string>
    <string name="tripButtonShowMap">Go To Map</string>
    <string name="tripNumberTrips">0</string>
    <string name="tripTextNumberTrips">Number of Trips:</string>
    <string name="EnturDateFormat">yyyy-MM-dd\'T\'HH:mm:sszzzz</string>
</resources>